Removing height auto to prevent squishing in Edge due to conflict with srcset plugin

--- a/wp-content/themes/clearhead-2016/sass/_base.scss
+++ b/wp-content/themes/clearhead-2016/sass/_base.scss
@@ -274,7 +274,7 @@ article {
 		a {
 			display: block;
 			img {
-				height: auto;
+				// height: auto;
 				display: block;
 			}
 		}
